cmd/pint/tests/0027_ci_branch.txt
mkdir testrepo
cd testrepo
exec git init --initial-branch=main .

cp ../src/v1.yml rules.yml
cp ../src/.pint.hcl .
env GIT_AUTHOR_NAME=pint
env GIT_AUTHOR_EMAIL=pint@example.com
env GIT_COMMITTER_NAME=pint
env GIT_COMMITTER_EMAIL=pint@example.com
exec git add .
exec git commit -am 'import rules and config'

exec git checkout -b v2
cp ../src/v2.yml rules.yml
exec git commit -am 'v2'

! exec pint --no-color ci
! stdout .
cmp stderr ../stderr.txt

-- stderr.txt --
level=INFO msg="Loading configuration file" path=.pint.hcl
level=INFO msg="Finding all rules to check on current git branch" base=main
level=INFO msg="Problems found" Fatal=1
rules.yml:2 Fatal: Prometheus failed to parse the query with this PromQL error: unexpected identifier "bi". (promql/syntax)
 2 |   expr: sum(foo) bi(job)

level=ERROR msg="Fatal error" err="problems found"
-- src/v1.yml --
- record: rule1
  expr: sum(foo) by(job)
- record: rule2
  expr: sum(foo) bi(job)

-- src/v2.yml --
- record: rule1
  expr: sum(foo) bi(job)
- record: rule2
  expr: sum(foo) bi(job)

-- src/.pint.hcl --
ci {
  baseBranch = "main"
}
parser {
  relaxed = [".*"]
}
